# tmconfpy

./: .gitignore  CONFIG-FORMATS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yaml  jekyll-gh-pages.yml  release-container.yaml  release-pypi.yaml  release.yaml  scheduled-ci-pipeline.yaml
ansible_collections/simonkowallik/tmconfpy/: LICENSE  README.md  galaxy.yml  requirements.txt
ansible_collections/simonkowallik/tmconfpy/playbook/: example-playbook.yml
ansible_collections/simonkowallik/tmconfpy/playbooks/: example-auditing-playbook.yml  example-playbook.yml
ansible_collections/simonkowallik/tmconfpy/plugins/module_utils/: parser.py  tmos_api.py
ansible_collections/simonkowallik/tmconfpy/plugins/modules/: tmconf_diff.py  tmconf_get.py
docs/: ANSIBLE.md  CONFIG-FORMATS.md  README.md  _config.yml  ansible.md  config-audit.md  data-formats.md  index.md
example/: README.md  bigip.conf  bigip.conf.json  conftest_policy_as_code.rego  imap.tmconf  imap.tmconf.json  notebook.ipynb  pop3.tmconf  pop3.tmconf.json  pytest_policy_as_code.py  test.tmconf  test.tmconf.json
tests/: test_apiserver.py  test_cli.py  test_examples.py  test_main.py  test_parser_methods.py  test_public_interface.py  test_sorting.py  test_special_cases.py  test_version_fixes.py
tmconfpy/: __init__.py  __main__.py  apiserver.py  cli.py  parser.py
