[tool.poetry]
name = "tmconfpy"
version = "1.0.0"
description = "A Python library to serialize F5 BIG-IP configuration files to a python dict or JSON."
authors = ["Simon Kowallik <sk-github@simonkowallik.com>"]
readme = "README.md"

homepage = "https://github.com/simonkowallik/tmconfpy"
repository = "https://github.com/simonkowallik/tmconfpy"
documentation = "https://github.com/simonkowallik/tmconfpy"

keywords = [
    "F5",
    "DevOps",
    "Security",
]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: System",
    "Topic :: Security",
]

[tool.poetry.scripts]
tmconfpy = "tmconfpy.cli:cli"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {version = "^0.111.0", optional = true}
uvicorn = {version = "^0.30.1", optional = true}
python-multipart = {version = "^0.0.9", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.5"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
coverage = "^7.5.4"
ruff = "^0.5.0"
ipykernel = "^6.29.5"
fastapi = "^0.111.0"
mypy = "^1.10.1"

[tool.poetry.extras]
apiserver = ["fastapi", "uvicorn", "python-multipart"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
